# Customizable-Dictionary

./: CMakeLists.txt  README.md
data_set/: English_English_history.txt  English_Vietnamese_history.txt  favorite_Eng_Eng.txt  favorite_Eng_Viet.txt
include/activity/: DictionaryActivity.hpp  SignInActivity.hpp
include/database/: UserData.hpp  UserRepo.hpp  UserSession.hpp  UtilitySave.hpp
include/dictionary/: DatasetIdentifiers.h  Trie.h
include/framework/: Activity.hpp  ActivityFactory.hpp  ActivityManager.hpp  AppConfig.hpp  AppConfig.inl  AppConfigKey.hpp  Application.hpp  EventListener.hpp  EventPublisher.hpp  Intent.hpp  Intent.inl  ResourceID.hpp  ResourceManager.hpp  ViewGroup.hpp
include/framework/exceptions/: ActivityFinishReturn.hpp  ConfigNotFound.hpp
include/gui/button_factory/: AddDefButtonFactory.hpp  AddFavButtonFactory.hpp  ConfirmButtonFactory.hpp  DailyButtonFactory.hpp  DelWordButtonFactory.hpp  DictionaryButtonFactory.hpp  EditDefButtonFactory.hpp  EditDictButtonFactory.hpp  FavButtonFactory.hpp  GameButtonFactory.hpp  LogOutButtonFactory.hpp  LoginHyperTextButtonFactory.hpp  ModDefButtonFactory.hpp  ModeButtonFactory.hpp  NewDefiButtonFactory.hpp  SetLangButtonFactory.hpp  SignInButtonFactory.hpp  SuggestButtonFactory.hpp  WordButtonFactory.hpp  WordButtonView.hpp
include/gui/rectangle_factory/: DefiViewFactory.hpp  LastLoginFactory.hpp  SideBackgroundView.hpp  SideViewFactory.hpp
include/gui/template/: ButtonView.hpp  ColoredButtonView.hpp  EditTextOnScrollView.hpp  EditTextView.hpp  RectangleView.hpp  RoundedRectangleShape.hpp  RoundedRectangleView.hpp  ScrollRectView.hpp  SetStateButtonView.hpp  SpriteButtonView.hpp  SpriteSheetView.hpp  SpriteView.hpp  TextButtonView.hpp  TextView.hpp  ToggleButtonView.hpp
include/gui/textbox_factory/: NewDefiFactory.hpp  NewWordFactory.hpp  NewWordTypeFactory.hpp  SearchBarFactory.hpp  SignInFormFactory.hpp
src/: main.cpp
src/activity/: DictionaryActivity.cpp  SignInActivity.cpp
src/database/: UserData.cpp  UserRepo.cpp  UserSession.cpp  UtilitySave.cpp
src/dictionary/: Trie.cpp  TrieNode.cpp  main.cpp
src/framework/: Activity.cpp  ActivityManager.cpp  Application.cpp  EventListener.cpp  EventPublisher.cpp  ViewGroup.cpp
src/framework/exceptions/: ActivityFinishReturn.cpp  ConfigNotFound.cpp
src/gui/button_factory/: AddDefButtonFactory.cpp  (+18 more)
userdata/: login.txt  users.db
(+24 files in other folders)
